# bonding-irc-release

./: README.md
implementation/checkers/: checker.py
implementation/servers/cpp/: CMakeLists.txt  Channel.cpp  Channel.h  Server.cpp  Server.h  User.cpp  User.h  build.sh  main.cpp  start.sh
implementation/servers/java/: Channel.java  Command.java  Globals.java  Main.java  Server.java  User.java  start.sh
implementation/servers/python/: server.py
protocol/: README.md
scenarios/: README.md
scenarios/01_Punkt_Feature_WHOIS/: README.md  check_whois.py
scenarios/01_Punkt_Feature_WHOIS/solutions/: whois_server.py
scenarios/02_Punkte_Feature_Ops/: README.md  check_ops.py
scenarios/02_Punkte_Feature_Ops/solutions/: op_server.py
scenarios/02_Punkte_Szenario_Covert_Command/: README.md
scenarios/02_Punkte_Szenario_Stasi/: README.md  check_stasi.py
scenarios/04_Punkte_Szenario_Mole/: README.md  check_mole.py
